--- a/project1/index.html
+++ b/project1/index.html
@@ -7,6 +7,6 @@
     <title>First Example</title>
 </head>
 <body>
-    <div>Hello World from Tashfeen</div>
+    <div>Hello To The Peaceful World</div>
 </body>
 </html>
